--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             }
         </style>
         <script type='module'>
-            import init, {Cell, Universe} from './game_of_life/package/game_of_life.js';
+            import init, {Cell, Universe} from './package/game_of_life.js';
 
             async function runGameOfLife() {
                 await init();
@@ -57,7 +57,7 @@
             runGameOfLife();
         </script>
         <script type='module'>
-            import init, {Player, Shot} from './space_invaders/package/space_invaders.js';
+            import init, {Player, Shot} from './package/space_invaders.js';
 
             async function runSpaceInvaders() {
                 await init();
