--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
         <title>How about game of life?</title>
         <style>
             body {
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
+                padding: 5%;
+                width: 89%;
+                height: 89%;
                 display: grid;
                 grid-template-areas: 
-                        "fps1 game1" 
-                        "fps2 game2";
-                grid-template-columns: 150px auto;
-                grid-template-rows: auto;
+                        "fps1 fps2" 
+                        "game1 game2";
             }
             h1 {
                 grid-area: fps1;
             }
-            pre {
+            div#game1 {
                 grid-area: game1;
             }
             h2 {
                 grid-area: fps2;
             }
-            div {
+            div#game2 {
                 grid-area: game2;
             }
         </style>
@@ -33,9 +30,10 @@
 
             async function runGameOfLife() {
                 await init();
-                const pre = document.getElementsByTagName('pre')[0];
+                const div = document.getElementById('game1');
                 const h1 = document.getElementsByTagName('h1')[0];
                 const universe = Universe.new();
+                const parser = new DOMParser();
 
                 const times = [];
 
@@ -47,7 +45,8 @@
                     times.push(now);
                     h1.innerHTML = 'FPS: ' + times.length;
 
-                    pre.textContent = universe.render();
+
+                    div.textContent = parser.parseFromString(universe.render(), 'text/html').body.innerText;
                     universe.tick();
 
                     window.requestAnimationFrame(renderGameOfLife);
@@ -63,7 +62,7 @@
                 await init();
                 let j = Player.new();
                 const h2 = document.getElementsByTagName('h2')[0];
-                const div = document.getElementsByTagName('div')[0];
+                const div = document.getElementById('game2');
                 const times = [];
 
                 function renderSpaceInvaders(timestamp) {
@@ -85,8 +84,8 @@
     </header>
     <body>
         <h1>FPS:</h1>
-        <pre></pre>
+        <div id="game1"></div>
         <h2>FPS:</h2>
-        <div></div>
+        <div id="game2"></div>
     </body>
 </html>
